# SPP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  impure-clang.nix  install_dependencies.patch  install_dependencies.sh  spp_test.sh  test.sh
artifact_evaluation/: .gitignore  README.md  artifact_evaluation.sh
benchmarks/: README.md
benchmarks/bugs/: README.md  bug1_btree.sh  bug1_btree_dbg.sh  bug1_btree_rel.sh  bug2_phoenix.sh  bug3_pmdk_array.sh  change_pmembench_bugs_file_path.sh  spp_bugs.sh
benchmarks/crash_consistency/: Dockerfile  README.md  change_pmembench_file_path.sh  crash-consistency-res.sh  inner_run.sh  pmdk_spp.patch  run-variants.sh
benchmarks/llvm_ir_dump/: README.md  dump_all_IR.sh  run_spp.sh
benchmarks/phoenix/: README.md  avg.sh  plot.py  run_phoenix_safepm.sh  run_phoenix_spp.sh  run_phoenix_vanilla.sh  run_variants.sh
benchmarks/pmembench/: README.md  run_safepm.sh  run_safepm_O1.sh  run_spp.sh  run_spp_O1.sh  run_spp_mock.sh  run_spp_mock_O1.sh  run_vanilla.sh  run_vanilla_O1.sh  run_variants.sh  run_variants_O1.sh  run_variants_mock.sh  run_variants_mock_O1.sh
benchmarks/pmemkv/: Dockerfile_spp  README.md  libpmemobj-cpp_spp.patch  pmemkv_spp.patch  run-all.sh  run-pmemkv-bench-delete.sh  run-pmemkv-bench-fill.sh  run-pmemkv-bench-numops.sh  run-pmemkv-bench-randomreadwrite.sh  run-pmemkv-bench-read.sh  run-variants.sh  run-variants_O1.sh  run-variants_mock.sh  run-variants_mock_O1.sh
benchmarks/profiling/pmembench/: README.md  pmembench_perf.cpp  run_vanilla_O1.sh  run_variants.sh
benchmarks/recovery_time/: Dockerfile  Makefile  README.md  inner_run.sh  recovery_table.sh  run-variants.sh
benchmarks/recovery_time/source/: recovery_run.c
benchmarks/ripe/: Dockerfile_intact  Dockerfile_intact_o1  Dockerfile_memcheck  Dockerfile_memcheck_o1  Dockerfile_pmem_heap  Dockerfile_pmem_heap_o1  Dockerfile_safepm  Dockerfile_safepm_o1  Dockerfile_spp  Dockerfile_spp_o1  Makefile  Makefile_container  Makefile_container_O1  README.md  Readme.md  memcheck.patch  pmdk_spp.patch  ripe_table.sh  ripe_tester.py  run-variants.sh  run-variants_O1.sh  run_ripe_intact.sh  run_ripe_spp.sh
benchmarks/ripe/source/: attack_gen.c  attack_gen.h  attack_gen_pmemobj_heap.c  parameters.h
benchmarks/space_overhead/: Dockerfile  README.md  inner_run.sh  run-variants.sh  space_overhead_results.sh
examples/: .gitignore  README.md  example.c  example.ll  launch.sh
examples/jinexample/: .gitignore  Makefile  README  create_SPPLIB.sh  launch.sh  launch_2.sh
examples/jinexample/spplib/: .gitignore
examples/jinexample/src/: Makefile  main.c  myfree.c  mymalloc.c  mystrcpy.c  mytest
examples/library_example/: .gitignore  driver.c  driver.h  launch.sh  libfuncs.c  libfuncs.h
examples/runtest/: backup_olden_spp.sh  create_spplib.sh  local_create_spplib.sh  local_olden_spp.sh  olden_baseline.sh  olden_spp.sh  smalltest.sh  test.sh
examples/simple_example/: example.c  launch.sh
examples/smallexample/scripts/: olden_spp.sh  smalltest.sh
examples/smallexample/spplib/: .gitignore
examples/smallexample/src/: main.c  mymalloc.c  mymemcpy.c  mystrcpy.c
hw_inst/: README.md  a.out  test_hw_instr.c
pass/: Makefile  TagProp.cpp  spp.cpp
plot_utils/: .gitignore  README.md  import_pmembench.sh  import_pmemkv.sh  plot_all.sh  plot_config_maps.yml  plot_config_pmembench_tx.yml  plot_config_pmemkv.yml  plotters.py
runtime/: Makefile  README.md  create_spplib.sh  runtime.c
runtime/src/: spp.c  spp.h  uthash.h  wrappers_spp.c
runtime/src/backup/: local_wrappers_spp.c  runtime.c
tests/: CMakeLists.txt  README.md  alloc_tx_abort.cpp  common.h  double_free.cpp  double_free_ntx.cpp  free_tx_abort.cpp  int32.cpp  mismatched_free.cpp  overflow.cpp  overflow_ntx.cpp  overflow_persistence.sh  overflow_persistence_helper.cpp  root_overflow.cpp  root_underflow.cpp  tx_add_overflow.cpp  type_overflow.cpp  use_after_free.cpp  use_after_free_ntx.cpp  use_after_realloc.cpp  zalloc.cpp
utils/: CMakeLists.txt  pool_overhead.cpp
utils/docker/: Dockerfile_spp  README.md  create_spp_image.sh  install_llvm.sh
utils/docker/compiler_images/: Dockerfile_clang_12  Dockerfile_spp_clang_12  README.md  create_clang_12_image.sh  create_spp_image.sh  install_llvm.sh  install_llvm_spp.sh
utils/docker/packaged_environments/: Dockerfile_pmdk  Dockerfile_pmdk_O1  Dockerfile_safepm  Dockerfile_safepm_O1  Dockerfile_spp  Dockerfile_spp_O1  Dockerfile_spp_mock  Dockerfile_spp_mock_O1  README.md  create_env_pmdk.sh  create_env_pmdk_O1.sh  create_env_safepm.sh  create_env_safepm_O1.sh  create_env_spp.sh  create_env_spp_O1.sh  create_env_spp_mock.sh  create_env_spp_mock_O1.sh  libpmemobj-cpp_spp.patch  libpmemobj-cpp_spp.patch_O1  libpmemobj-cpp_vanilla.patch  phoenix_safepm.patch  phoenix_spp.patch  (+19 more)
(+35 files in other folders)
